--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/style.css">
     <meta charset="utf-8">
     <title>Resume</title>
@@ -9,8 +10,8 @@
   <header>
     Resume
   </header>
-  <div class="mainDiv">
- <div class="card">
+   <div class="mainDiv">
+<!-- <div class="card">
    <img src="image/profile.png" alt="exact img name">
   <a href="resumes.html"><h2>Nikhila</h2></a>
    <h3>cse</h3>
@@ -30,7 +31,10 @@
    <h3>cse</h3>
    <h5>8439523</h5>
    <h5>nsakjc@gmail.com</h5>
- </div>
+ </div>-->
 </div>
 </body>
+<script type="text/javascript" src="card.js">
+
+</script>
 </html>
