--- a/resumes.html
+++ b/resumes.html
@@ -9,17 +9,17 @@
   <body>
     <div class="main">
       <div class="leftDiv">
-        <img src="image/profile.png" alt="exact img name">
+        <!-- <img src="image/profile.png" alt="exact img name">
        <h2>Nikhila</h2>
         <h3>cse</h3>
         <h5>9553620192</h5>
-        <h5>nikhilaperla.05@gmail.com</h5>
+        <h5>nikhilaperla.05@gmail.com</h5> -->
       </div>
         <div class="rightDiv">
-          <h1>Career object</h1><hr>
+          <!-- <h1>Career object</h1><hr>
           <p><i>To build a long-term career in with opportunities for career growth.
-To enhance my educational and professional skills in a stable and dynamic workplace.</i></p>
-<h1>Education Information</h1><hr>
+To enhance my educational and professional skills in a stable and dynamic workplace.</i></p> -->
+<!-- <h1>Education Information</h1><hr>
 <h3>B.TECH</h3>
 <ul>
   <li>college : QIS</li>
@@ -37,12 +37,15 @@ To enhance my educational and professional skills in a stable and dynamic workpl
   <li>college : narayana e-techno school</li>
   <li>branch : ssc</li>
   <li>marks : 83%</li>
-</ul>
-<h1>Technoligies</h1><hr>
+</ul> -->
+<!-- <h1>Technoligies</h1><hr>
 <li>java</li>
 <li>c++</li>
-<li>html</li>
+<li>html</li> -->
         </div>
         </div>
       </body>
+      <script type="text/javascript" src="resume.js">
+
+      </script>
 </html>
